adicionando configurações de sql

--- a/backend/src/main/resources/application-prd.properties
+++ b/backend/src/main/resources/application-prd.properties
@@ -1,14 +1,18 @@
+# Configurações do HikariCP
 spring.datasource.hikari.connection-timeout=40000
 spring.datasource.hikari.maximum-pool-size=10
+
+# Configurações do Hibernate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.jdbc.use_streams_for_binary=true
 spring.jpa.properties.hibernate.connection.autocommit=false
-spring.datasource.url=postgresql://todolist_01ip_user:4aLc5xfqJXhh8t8gb9q4tlz7cS41smG3@dpg-ct4g5n56l47c73f96a00-a.oregon-postgres.render.com/todolist_01ip
+
+# Configurações do banco de dados
+spring.datasource.url=jdbc:postgresql://dpg-ct4g5n56l47c73f96a00-a.oregon-postgres.render.com/todolist_01ip
 spring.datasource.username=todolist_01ip_user
 spring.datasource.password=4aLc5xfqJXhh8t8gb9q4tlz7cS41smG3
-#spring.datasource.port=5432
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configurações do Hibernate Dialect e DDL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
-
