--- a/backend/src/main/resources/application-prd.properties
+++ b/backend/src/main/resources/application-prd.properties
@@ -1,18 +1,18 @@
-# Configurações do HikariCP
+# Configuracoes do HikariCP
 spring.datasource.hikari.connection-timeout=40000
 spring.datasource.hikari.maximum-pool-size=10
 
-# Configurações do Hibernate
+# Configuracoes do Hibernate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.jdbc.use_streams_for_binary=true
 spring.jpa.properties.hibernate.connection.autocommit=false
 
-# Configurações do banco de dados
-spring.datasource.url=jdbc:postgresql://dpg-ct4g5n56l47c73f96a00-a.oregon-postgres.render.com/todolist_01ip
-spring.datasource.username=todolist_01ip_user
-spring.datasource.password=4aLc5xfqJXhh8t8gb9q4tlz7cS41smG3
+# Configuracoes do banco de dados
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configurações do Hibernate Dialect e DDL
+# Configuracoes do Hibernate Dialect e DDL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
