--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,111 +1,72 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  # Frontend Service
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:80" # Verifique se a porta 3000 está disponível
-    networks:
-      - app-network
-    environment:
-      - REACT_APP_API_URL=http://backend:8080 # Substitua pelo URL correto do backend, se necessário
-
-  # Backend Service
   backend:
     build:
-      context: ./backend
+      context: ./backend # Pasta onde está o Dockerfile do backend
       dockerfile: Dockerfile
     ports:
-      - "8080:8080" # Verifique se a porta 8080 está disponível
-    networks:
-      - app-network
+      - "8080:8080" # Porta exposta pelo backend
     environment:
-      SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/mydatabase # Substitua "mydatabase" pelo nome do seu banco
-      SPRING_DATASOURCE_USERNAME=postgres # Substitua "postgres" pelo usuário configurado no banco de dados
-      SPRING_DATASOURCE_PASSWORD=postgres # Substitua "postgres" pela senha configurada no banco de dados
-
-  # PostgreSQL Database
-  db:
-    image: postgres:15
-    container_name: postgres-db
-    ports:
-      - "5432:5432" # Verifique se a porta 5432 está disponível
-    networks:
-      - app-network
-    environment:
-      POSTGRES_USER: postgres # Substitua "postgres" pelo usuário do banco de dados
-      POSTGRES_PASSWORD: postgres # Substitua "postgres" pela senha do banco de dados
-      POSTGRES_DB: mydatabase # Substitua "mydatabase" pelo nome do banco de dados
-    volumes:
-      - db-data:/var/lib/postgresql/data
-
-  # Zabbix Database
-  zabbix-db:
-    image: postgres:15
-    container_name: zabbix-db
-    environment:
-      POSTGRES_USER: zabbix # Substitua se você alterou o usuário padrão do banco de dados Zabbix
-      POSTGRES_PASSWORD: zabbix # Substitua se você alterou a senha padrão do banco de dados Zabbix
-      POSTGRES_DB: zabbix # Substitua se você alterou o nome padrão do banco de dados Zabbix
-    volumes:
-      - zabbix-db-data:/var/lib/postgresql/data
-    networks:
-      - app-network
-
-  # Zabbix Server
-  zabbix-server:
-    image: zabbix/zabbix-server-pgsql:latest
-    container_name: zabbix-server
+      DB_USERNAME: todolist_01ip_user
+      DB_PASSWORD: 4aLc5xfqJXhh8t8gb9q4tlz7cS41smG3
+      DB_HOST: dpg-ct4g5n56l47c73f96a00-a.oregon-postgres.render.com
+      DB_PORT: 5432
+      DB_NAME: todolist_01ip
+      ZABBIX_SERVER: zabbix-server  # Variável de ambiente para o Zabbix Agent
     depends_on:
-      - zabbix-db
-    environment:
-      DB_SERVER_HOST: zabbix-db
-      POSTGRES_USER: zabbix # Certifique-se de que este usuário corresponde ao configurado no serviço "zabbix-db"
-      POSTGRES_PASSWORD: zabbix # Certifique-se de que esta senha corresponde ao configurado no serviço "zabbix-db"
-      POSTGRES_DB: zabbix # Certifique-se de que este nome corresponde ao configurado no serviço "zabbix-db"
-    ports:
-      - "10051:10051" # Verifique se a porta 10051 está disponível
-    networks:
-      - app-network
+      - database
 
-  # Zabbix Frontend
-  zabbix-frontend:
-    image: zabbix/zabbix-web-nginx-pgsql:latest
-    container_name: zabbix-frontend
-    depends_on:
-      - zabbix-server
-      - zabbix-db
-    environment:
-      DB_SERVER_HOST: zabbix-db
-      POSTGRES_USER: zabbix # Certifique-se de que este usuário corresponde ao configurado no serviço "zabbix-db"
-      POSTGRES_PASSWORD: zabbix # Certifique-se de que esta senha corresponde ao configurado no serviço "zabbix-db"
-      POSTGRES_DB: zabbix # Certifique-se de que este nome corresponde ao configurado no serviço "zabbix-db"
-      ZBX_SERVER_HOST: zabbix-server # Verifique se o hostname do servidor Zabbix está correto
+  frontend:
+    build:
+      context: ./frontend # Pasta onde está o Dockerfile do frontend
+      dockerfile: Dockerfile
     ports:
-      - "8081:8080" # Verifique se a porta 8081 está disponível
-    networks:
-      - app-network
-
-  # Zabbix Agent for Backend Monitoring
-  zabbix-agent-backend:
-    image: zabbix/zabbix-agent:latest
-    container_name: zabbix-agent-backend
-    depends_on:
-      - zabbix-server
+      - "3000:80" # Porta exposta pelo frontend
     environment:
-      ZBX_SERVER_HOST: zabbix-server # Verifique se o hostname do servidor Zabbix está correto
-      ZBX_HOSTNAME: backend # Certifique-se de que este hostname corresponde ao nome configurado no Zabbix Frontend
-    networks:
-      - app-network
-    links:
+      ZABBIX_SERVER: zabbix-server  # Variável de ambiente para o Zabbix Agent
+    depends_on:
       - backend
 
-networks:
-  app-network:
+  database:
+    image: postgres:15
+    container_name: postgres_db
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: your-database-username
+      POSTGRES_PASSWORD: your-database-password
+      POSTGRES_DB: your-database-name
+      ZABBIX_SERVER: zabbix-server  # Variável de ambiente para o Zabbix Agent
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  zabbix-server:
+    image: zabbix/zabbix-server-pgsql:alpine-5.0.0
+    container_name: zabbix-server
+    environment:
+      - ZABBIX_DB_HOST=database
+      - ZABBIX_DB_NAME=zabbix
+      - ZABBIX_DB_USER=zabbix
+      - ZABBIX_DB_PASSWORD=zabbixpass
+    ports:
+      - "10051:10051"  # Porta para a comunicação com os agentes Zabbix
+
+  zabbix-web:
+    image: zabbix/zabbix-web-nginx-pgsql:alpine-5.0.0
+    container_name: zabbix-web
+    environment:
+      - ZABBIX_SERVER_HOST=zabbix-server
+    ports:
+      - "8081:8080"  # Porta para acessar a interface web do Zabbix
+
+  zabbix-agent:
+    image: zabbix/zabbix-agent:alpine-5.0.0
+    container_name: zabbix-agent
+    environment:
+      - ZABBIX_SERVER=zabbix-server  # Endereço do servidor Zabbix
+    network_mode: "host"  # Monitorando o host diretamente
 
 volumes:
-  db-data:
-  zabbix-db-data:
+  postgres_data:
+  zabbix_data:
